# fourcc

./: Cargo.toml  README.md
fourcc-impl/: Cargo.toml
fourcc-impl/src/: lib.rs
src/: lib.rs
tests/: example.rs
