[package]

name = "fourcc"
version = "0.0.4"
authors = ["The Rust Project Developers"]

license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/fourcc"
homepage = "https://github.com/rust-lang/fourcc"
keywords = ["plugin", "macro"]
description = """
Syntax extension to generate FourCCs (four-character code).
"""

[lib]

name = "fourcc"
plugin = true
