[package]
name = "fourcc-impl"
description = "Implementation crate for the procedural fourcc! macro."
version = "0.1.0"
authors = [ "The Rust Project Developers" ]
repository = "https://github.com/rust-lang/fourcc"
homepage = "https://github.com/rust-lang/fourcc"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.4"
syn = "0.12"